--- a/chLogger/tst/config.json
+++ b/chLogger/tst/config.json
@@ -1,6 +1,7 @@
 {
   "IntervalMs": 300,
   "ConsolFilterFn": {"nagi": 0, "republic": 1},
+  "ConsolFilterUn": {"unit1": 1},
   "Mode": 0,
   "Dir": "log"
 }
