--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ tst/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+chLogger/.DS_Store
